# vinyldigger

./: .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  justfile  test-coverage-improvements.md
.github/: dependabot.yml
backend/: .dockerignore  .env.example  .env.test  Dockerfile  alembic.ini  fix_enum_case.py  mypy.ini  pyproject.toml  pytest.ini  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 005_add_orchestration_fields.py  036a1d511667_initial_migration_with_users_table.py  48cdc1a1d4e8_add_search_orchestration_tables_and_.py  initial_schema.py
backend/docs/: DISCOGS_AUTH.md  development_db_workflow.md  marketplace-search-implementation.md
backend/scripts/: cleanup_duplicate_sellers.py
backend/src/: main.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: admin.py  auth.py  budgets.py  chains.py  collections.py  config.py  docs.py  ebay_oauth_redirect.py  oauth.py  search_analysis.py  searches.py  templates.py
backend/src/api/v1/schemas/: search_orchestration.py
backend/src/core/: config.py  database.py  logging.py  redis_client.py  scraper_config.py  security.py
backend/src/models/: __init__.py  api_key.py  app_config.py  collection.py  collection_item.py  item_match.py  oauth_token.py  price_history.py  search.py  search_analysis.py  search_budget.py  search_chain.py  search_template.py  seller.py  user.py
backend/src/services/: __init__.py  base.py  budget_service.py  discogs.py  discogs_marketplace_scraper.py  ebay.py  item_matcher.py  recommendation_engine.py  scraper_monitoring.py  search.py  search_orchestrator.py  seller_analyzer.py  template_service.py
backend/src/workers/: __init__.py  celery_app.py  scheduler.py  tasks.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_celery_tasks.py  test_chain_execution.py  test_collection_duplicate_detection.py  test_collections.py  test_config.py  test_deal_recommendations.py  test_discogs_service.py  test_ebay_service.py  test_error_handling.py  test_health.py  test_marketplace_scraper_integration.py  test_multi_item_recommendations.py  test_oauth.py  test_oauth_token_expiration.py  test_oauth_token_expiration_simple.py  test_orchestration_api.py  test_orchestration_integration.py  test_platform_validation.py  test_redis_client.py  test_scheduler.py  test_searches.py  test_user_endpoints.py
backend/tests/api/v1/endpoints/: test_search_analysis.py
backend/tests/integration/: test_enhanced_search_workflow.py
backend/tests/mocks/: discogs_marketplace_mocks.py
backend/tests/services/: test_base.py  test_item_matcher.py  test_recommendation_engine.py  test_seller_analyzer.py
docs/: README.md  URL_UPDATE_SUMMARY.md  analysis-engine.md  api-examples.md  api.md  architecture.md  (+17 more)
(+102 files in other folders)
